infra/k3s/applications/istio-ingress/base/gateway-api.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: api-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - api.gaegaeting.app
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - api.gaegaeting.app
      tls:
        mode: SIMPLE
        credentialName: api-gaegaeting-app-tls
