infra/k3s/applications/istio-ingress/base/virtualservice-argocd.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
  namespace: istio-system
spec:
  hosts:
    - argo.gaegaeting.app
  gateways:
    - argocd-gateway
  http:
    - route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
